# Zip2S3Uploader

./: .gitignore  README.md  main.py  pyproject.toml  tests.py
